--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -46,23 +46,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{note}\n",
-    "\n",
+    "```{note}\n",
     "A collection of curated spatial datasets in SpatialData format is available on the [scverse/spatialdata-db instance](https://lamin.ai/scverse/spatialdata-db).\n",
-    "\n",
-    ":::"
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{note}\n",
-    "\n",
+    "````{dropdown} spatial data vs SpatialData terminology\n",
+    "```{note}\n",
     "When we mention spatial data, we refer to data from spatial assays, such as spatial transcriptomics or proteomics, that includes spatial coordinates to represent the organization of molecular features in tissue.\n",
     "When we refer SpatialData, we mean spatial omics data stored in the scverse SpatialData framework.\n",
-    "\n",
-    ":::"
+    "```\n",
+    "````"
    ]
   },
   {
@@ -91,7 +89,8 @@
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "ln.track()"
+    "spatial_guide_datasets = ln.Project(name=\"spatial guide datasets\").save()\n",
+    "ln.track(project=spatial_guide_datasets.name)"
    ]
   },
   {
@@ -182,6 +181,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metadata is stored in two places in the SpatialData object:\n",
+    "1. Dataset level metadata is stored in `sdata.attrs[\"sample\"]`.\n",
+    "2. Measurement specific metadata is stored in the associated tables in `sdata.tables`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a {class}`lamindb.Schema` to curate both sample and table metadata."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "````{dropdown} Curating different spatial technologies\n",
+    "```{note}\n",
+    "Reading different spatial technologies into SpatialData objects can result in very different objects with different metadata.\n",
+    "Therefore, it can be useful to define technology specific Schemas by reusing Schema components.\n",
+    "```\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# define sample schema\n",
+    "spatial_sample_schema = ln.Schema(\n",
+    "    name=\"Spatial sample level\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"organism\", dtype=bt.Organism).save(),\n",
+    "        ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save(),\n",
+    "        ln.Feature(name=\"disease\", dtype=bt.Disease).save(),\n",
+    "        ln.Feature(name=\"tissue\", dtype=bt.Tissue).save(),\n",
+    "    ],\n",
+    "    coerce_dtype=True,\n",
+    ").save()\n",
+    "\n",
+    "# define table obs schema\n",
+    "spatial_obs_schema = ln.Schema(\n",
+    "    name=\"Spatial obs level\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True).save(),\n",
+    "    ],\n",
+    "    coerce_dtype=True,\n",
+    "    minimal_set=False,\n",
+    ").save()\n",
+    "\n",
+    "# define table var schema\n",
+    "spatial_var_schema = ln.Schema(\n",
+    "    name=\"Spatial var level\", itype=bt.Gene.ensembl_gene_id, dtype=int\n",
+    ").save()\n",
+    "\n",
+    "# define composite schema\n",
+    "spatial_schema = ln.Schema(\n",
+    "    name=\"Spatial schema\",\n",
+    "    otype=\"SpatialData\",\n",
+    "    components={\n",
+    "        \"sample\": spatial_sample_schema,\n",
+    "        \"table:obs\": spatial_obs_schema,\n",
+    "        \"table:var\": spatial_var_schema,\n",
+    "    },\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Xenium data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -201,22 +284,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Metadata is stored in two places in the SpatialData object:\n",
-    "1. Dataset level metadata is stored in `sdata.attrs[\"sample\"]`.\n",
-    "2. Measurement specific metadata is stored in the associated tables in `sdata.tables`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We define a {class}`lamindb.Schema` to curate both sample and table metadata."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -226,55 +293,7 @@
    },
    "outputs": [],
    "source": [
-    "# define sample schema\n",
-    "spatial_sample_schema = ln.Schema(\n",
-    "    name=\"Xenium sample level\",\n",
-    "    features=[\n",
-    "        ln.Feature(name=\"organism\", dtype=bt.Organism).save(),\n",
-    "        ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save(),\n",
-    "        ln.Feature(name=\"disease\", dtype=bt.Disease).save(),\n",
-    "        ln.Feature(name=\"tissue\", dtype=bt.Tissue).save(),\n",
-    "    ],\n",
-    "    coerce_dtype=True,\n",
-    ").save()\n",
-    "\n",
-    "# define table obs schema\n",
-    "xenium_obs_schema = ln.Schema(\n",
-    "    name=\"Xenium obs level\",\n",
-    "    features=[\n",
-    "        ln.Feature(name=\"celltype_major\", dtype=bt.CellType).save(),\n",
-    "    ],\n",
-    "    coerce_dtype=True,\n",
-    ").save()\n",
-    "\n",
-    "# define table var schema\n",
-    "spatial_var_schema = ln.Schema(\n",
-    "    name=\"Xenium var level\", itype=bt.Gene.ensembl_gene_id, dtype=int\n",
-    ").save()\n",
-    "\n",
-    "# define composite schema\n",
-    "xenium_schema = ln.Schema(\n",
-    "    name=\"Xenium schema\",\n",
-    "    otype=\"SpatialData\",\n",
-    "    components={\n",
-    "        \"sample\": spatial_sample_schema,\n",
-    "        \"table:obs\": xenium_obs_schema,\n",
-    "        \"table:var\": spatial_var_schema,\n",
-    "    },\n",
-    ").save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_1_sdata, xenium_schema)\n",
+    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_1_sdata, spatial_schema)\n",
     "try:\n",
     "    xenium_curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
@@ -329,17 +348,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "xenium_curator.slots[\"table:obs\"].cat.add_new_from(\"celltype_major\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Register curated Artifact"
    ]
   },
   {
@@ -366,13 +382,6 @@
    "outputs": [],
    "source": [
     "xenium_1_curated_af.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create a Collection of curated SpatialData datasets"
    ]
   },
   {
@@ -434,7 +443,7 @@
    },
    "outputs": [],
    "source": [
-    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_2_sdata, xenium_schema)\n",
+    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_2_sdata, spatial_schema)\n",
     "try:\n",
     "    xenium_curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
@@ -478,26 +487,6 @@
    },
    "outputs": [],
    "source": [
-    "visium_schema = ln.Schema(\n",
-    "    name=\"Visium schema\",\n",
-    "    otype=\"SpatialData\",\n",
-    "    components={\n",
-    "        \"sample\": spatial_sample_schema,\n",
-    "        \"table:var\": spatial_var_schema,\n",
-    "    },\n",
-    ").save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
     "visium_aligned_sdata = (\n",
     "    ln.Artifact.using(\"laminlabs/lamindata\")\n",
     "    .get(key=\"visium_aligned_guide_min.zarr\")\n",
@@ -516,7 +505,7 @@
    },
    "outputs": [],
    "source": [
-    "visium_curator = ln.curators.SpatialDataCurator(visium_aligned_sdata, visium_schema)\n",
+    "visium_curator = ln.curators.SpatialDataCurator(visium_aligned_sdata, spatial_schema)\n",
     "try:\n",
     "    visium_curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
@@ -534,23 +523,6 @@
    "outputs": [],
    "source": [
     "visium_curated_af = visium_curator.save_artifact(key=\"visium.zarr\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "spatial_collection = ln.Collection(\n",
-    "    [xenium_1_curated_af, xenium_2_curated_af, visium_curated_af],\n",
-    "    key=\"spatial_collection\",\n",
-    ").save()\n",
-    "spatial_collection"
    ]
   },
   {
