--- a/docs/spatial2.ipynb
+++ b/docs/spatial2.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "ln.track()"
+    "ln.track(project=\"spatial guide datasets\")"
    ]
   },
   {
