--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -54,28 +54,14 @@
     "\n",
     "mp.set_start_method(\"spawn\", force=True)\n",
     "\n",
-    "ln.track()"
+    "ln.track(project=\"spatial guide datasets\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we query for Visium and Xenium datasets and create a merged dataset.\n",
-    "They are a part of our collection:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "ln.Collection.get(key=\"spatial_collection\").artifacts.df()"
+    "First, we query for Visium and Xenium datasets and create a merged dataset:"
    ]
   },
   {
