--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -66,7 +66,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# !pip install 'lamindb[jupyter,bionty]' spatialdata spatialdata-plot\n",
