--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Spatial"
    ]
   },
@@ -55,12 +62,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "````{dropdown} spatial data vs SpatialData terminology\n",
-    "```{note}\n",
+    "```{dropdown} spatial data vs SpatialData terminology\n",
     "When we mention spatial data, we refer to data from spatial assays, such as spatial transcriptomics or proteomics, that includes spatial coordinates to represent the organization of molecular features in tissue.\n",
     "When we refer SpatialData, we mean spatial omics data stored in the scverse SpatialData framework.\n",
-    "```\n",
-    "````"
+    "```"
    ]
   },
   {
@@ -204,12 +209,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "````{dropdown} Curating different spatial technologies\n",
-    "```{note}\n",
+    "```{dropdown} Curating different spatial technologies\n",
     "Reading different spatial technologies into SpatialData objects can result in very different objects with different metadata.\n",
     "Therefore, it can be useful to define technology specific Schemas by reusing Schema components.\n",
-    "```\n",
-    "````"
+    "```"
    ]
   },
   {
