✨ New spatial data guide (#181)
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -28,16 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -60,7 +50,23 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import bionty as bt"
+    "import bionty as bt\n",
+    "\n",
+    "ln.track()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating MuData Artifacts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lamindb provides a {meth}`~lamindb.Artifact.from_mudata` method to create {class}`~lamindb.Artifact` from MuData objects."
    ]
   },
   {
@@ -78,10 +84,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "mdata_af = ln.Artifact.from_mudata(mdata, key=\"papalexi.h5mu\")\n",
+    "mdata_af"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# MuData Artifacts have the corresponding otype\n",
+    "mdata_af.otype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# MuData Artifacts can easily be loaded back into memory\n",
+    "papalexi_in_memory = mdata_af.load()\n",
+    "papalexi_in_memory"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate annotations "
+    "## Validate MuData annotations"
    ]
   },
   {
@@ -121,7 +170,7 @@
    },
    "outputs": [],
    "source": [
-    "# optional: register additional columns we'd like to curate\n",
+    "# optional: register additional columns we would like to curate\n",
     "curate.add_new_from_columns(modality=\"rna\")\n",
     "curate.add_new_from_columns(modality=\"adt\")\n",
     "curate.add_new_from_columns(modality=\"hto\")\n",
@@ -178,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register curated artifact"
+    "## Register curated Artifact"
    ]
   },
   {
@@ -205,6 +254,19 @@
    "outputs": [],
    "source": [
     "artifact.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "ln.finish()"
    ]
   },
   {
