--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -18,16 +18,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{note}\n",
+    "Here, you'll learn how to manage spatial datasets:\n",
     "\n",
-    "Please see: \n",
+    "1. curate and ingest spatial data (![spatial1/4](https://img.shields.io/badge/spatial1/4-lightgrey))\n",
+    "2. query & analyze spatial datasets ([![spatial2/4](https://img.shields.io/badge/spatial2/4-lightgrey)](/spatial2))\n",
+    "3. load the collection into memory & train a ML model ([![spatial3/4](https://img.shields.io/badge/spatial3/4-lightgrey)](/spatial3))\n",
+    "4. create and share interactive visualizations with vitessce ([![spatial4/4](https://img.shields.io/badge/spatial4/4-lightgrey)](/spatial4))\n",
     "\n",
-    "- {doc}`docs:vitessce`\n",
-    "- {doc}`docs:rxrx`\n",
     "\n",
-    "This page is for now just a stub.\n",
+    "```{toctree}\n",
+    ":maxdepth: 1\n",
+    ":hidden:\n",
     "\n",
-    ":::"
+    "spatial2\n",
+    "spatial3\n",
+    "spatial4\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spatial omics data integrates molecular profiling (e.g., transcriptomics, proteomics) with spatial information, preserving the spatial organization of cells and tissues.\n",
+    "It enables high-resolution mapping of molecular activity within biological contexts, crucial for understanding cellular interactions and microenvironments.\n",
+    "\n",
+    "Many different spatial technologies such as multiplexed imaging, spatial transcriptomics, spatial proteomics, whole-slide imaging, spatial metabolomics, and 3D tissue reconstruction exist which can all be stored in the [SpatialData](https://github.com/scverse/spatialdata) data framework.\n",
+    "For more details we refer to the original publication:\n",
+    "\n",
+    "Marconato, L., Palla, G., Yamauchi, K.A. et al. SpatialData: an open and universal data framework for spatial omics. Nat Methods 22, 58–62 (2025). [https://doi.org/10.1038/s41592-024-02212-x](https://doi.org/10.1038/s41592-024-02212-x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "A collection of curated spatial datasets in SpatialData format is available on the [scverse/spatialdata-db instance](https://lamin.ai/scverse/spatialdata-db).\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{dropdown} spatial data vs SpatialData terminology\n",
+    "When we mention spatial data, we refer to data from spatial assays, such as spatial transcriptomics or proteomics, that includes spatial coordinates to represent the organization of molecular features in tissue.\n",
+    "When we refer SpatialData, we mean spatial omics data stored in the scverse SpatialData framework.\n",
+    "```"
    ]
   },
   {
@@ -40,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty]'\n",
+    "# !pip install 'lamindb[jupyter,bionty]' spatialdata spatialdata-plot\n",
     "!lamin init --storage ./test-spatial --modules bionty"
    ]
   },
@@ -56,41 +94,26 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
-    "import matplotlib.pyplot as plt\n",
-    "import scanpy as sc\n",
+    "import warnings\n",
     "\n",
-    "ln.track(\"daeFs3PkquDW0000\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "spatial_guide_datasets = ln.Project(name=\"spatial guide datasets\").save()\n",
+    "ln.track(project=spatial_guide_datasets.name)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## An example spatial dataset"
+    "## Creating SpatialData Artifacts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we have a spatial gene expression dataset measured using [Visium](https://www.10xgenomics.com/products/spatial-gene-expression) from [Suo22](https://developmental.cellatlas.io/fetal-immune).\n",
-    "\n",
-    "This collection contains two parts:\n",
-    "\n",
-    "1. a high-res image of a slice of fetal liver\n",
-    "2. a single cell expression dataset in .h5ad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_path = ln.core.datasets.file_tiff_suo22()\n",
-    "img = plt.imread(img_path)\n",
-    "plt.imshow(img)\n",
-    "plt.show()"
+    "lamindb provides a {meth}`~lamindb.Artifact.from_spatialdata` method to create {class}`~lamindb.Artifact` from SpatialData objects."
    ]
   },
   {
@@ -103,34 +126,8 @@
    },
    "outputs": [],
    "source": [
-    "adata = ln.core.datasets.anndata_suo22_Visium10X()\n",
-    "# subset to the same image\n",
-    "adata = adata[adata.obs[\"img_id\"] == \"F121_LP1_4LIV\"].copy()\n",
-    "adata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot where CD45+ leukocytes are in the slice\n",
-    "sc.pl.scatter(adata, \"array_row\", \"array_col\", color=\"ENSG00000081237\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Validate annotations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll register the single-cell data and the image as a `Collection`."
+    "example_blobs_sdata = ln.core.datasets.spatialdata_blobs()\n",
+    "example_blobs_sdata"
    ]
   },
   {
@@ -143,11 +140,199 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(\n",
-    "    adata,\n",
-    "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\"sample\": ln.ULabel.name},\n",
-    "    organism=\"human\",\n",
+    "blobs_af = ln.Artifact.from_spatialdata(example_blobs_sdata, key=\"example_blobs.zarr\")\n",
+    "blobs_af"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# SpatialData Artifacts have the corresponding otype\n",
+    "blobs_af.otype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# SpatialData Artifacts can easily be loaded back into memory\n",
+    "example_blobs_in_memory = blobs_af.load()\n",
+    "example_blobs_in_memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validate SpatialData annotations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the remainder of the guide, we will work with two 10X Xenium and a 10X Visium H&E image dataset.\n",
+    "\n",
+    "More details can be found in the [ingestion notebook](https://lamin.ai/laminlabs/lamindata/transform/MN1DpkKGjzbk)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metadata is stored in two places in the SpatialData object:\n",
+    "1. Dataset level metadata is stored in `sdata.attrs[\"sample\"]`.\n",
+    "2. Measurement specific metadata is stored in the associated tables in `sdata.tables`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a {class}`lamindb.Schema` to curate both sample and table metadata."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{dropdown} Curating different spatial technologies\n",
+    "Reading different spatial technologies into SpatialData objects can result in very different objects with different metadata.\n",
+    "Therefore, it can be useful to define technology specific Schemas by reusing Schema components.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# define sample schema\n",
+    "spatial_sample_schema = ln.Schema(\n",
+    "    name=\"Spatial sample level\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"organism\", dtype=bt.Organism).save(),\n",
+    "        ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save(),\n",
+    "        ln.Feature(name=\"disease\", dtype=bt.Disease).save(),\n",
+    "        ln.Feature(name=\"tissue\", dtype=bt.Tissue).save(),\n",
+    "    ],\n",
+    "    coerce_dtype=True,\n",
+    ").save()\n",
+    "\n",
+    "# define table obs schema\n",
+    "spatial_obs_schema = ln.Schema(\n",
+    "    name=\"Spatial obs level\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True).save(),\n",
+    "    ],\n",
+    "    coerce_dtype=True,\n",
+    "    minimal_set=False,\n",
+    ").save()\n",
+    "\n",
+    "# define table var schema\n",
+    "spatial_var_schema = ln.Schema(\n",
+    "    name=\"Spatial var level\", itype=bt.Gene.ensembl_gene_id, dtype=int\n",
+    ").save()\n",
+    "\n",
+    "# define composite schema\n",
+    "spatial_schema = ln.Schema(\n",
+    "    name=\"Spatial schema\",\n",
+    "    otype=\"SpatialData\",\n",
+    "    components={\n",
+    "        \"sample\": spatial_sample_schema,\n",
+    "        \"table:obs\": spatial_obs_schema,\n",
+    "        \"table:var\": spatial_var_schema,\n",
+    "    },\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Xenium data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# load first of two cropped Xenium datasets\n",
+    "xenium_aligned_1_sdata = (\n",
+    "    ln.Artifact.using(\"laminlabs/lamindata\")\n",
+    "    .get(key=\"xenium_aligned_1_guide_min.zarr\")\n",
+    "    .load()\n",
+    ")\n",
+    "xenium_aligned_1_sdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_1_sdata, spatial_schema)\n",
+    "try:\n",
+    "    xenium_curator.validate()\n",
+    "except ln.errors.ValidationError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_aligned_1_sdata.tables[\"table\"].obs[\"celltype_major\"] = (\n",
+    "    xenium_aligned_1_sdata.tables[\"table\"]\n",
+    "    .obs[\"celltype_major\"]\n",
+    "    .replace(\n",
+    "        {\n",
+    "            \"CAFs\": \"cancer associated fibroblast\",\n",
+    "            \"Endothelial\": \"endothelial cell\",\n",
+    "            \"Myeloid\": \"myeloid cell\",\n",
+    "            \"PVL\": \"perivascular cell\",\n",
+    "            \"T-cells\": \"T cell\",\n",
+    "            \"B-cells\": \"B cell\",\n",
+    "            \"Normal Epithelial\": \"epithelial cell\",\n",
+    "            \"Plasmablasts\": \"plasmablast\",\n",
+    "            \"Cancer Epithelial\": \"neoplastic epithelial cell\",\n",
+    "        }\n",
+    "    )\n",
     ")"
    ]
   },
@@ -161,7 +346,10 @@
    },
    "outputs": [],
    "source": [
-    "curate.validate()"
+    "try:\n",
+    "    xenium_curator.validate()\n",
+    "except ln.errors.ValidationError as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -174,7 +362,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.add_new_from(\"sample\")"
+    "xenium_curator.slots[\"table:obs\"].cat.add_new_from(\"celltype_major\")"
    ]
   },
   {
@@ -187,47 +375,34 @@
    },
    "outputs": [],
    "source": [
-    "curate.validate()"
+    "xenium_1_curated_af = xenium_curator.save_artifact(key=\"xenium1.zarr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_1_curated_af.describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register curated artifact"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact_ad = curate.save_artifact(description=\"Suo22 Visium10X image F121_LP1_4LIV\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact_ad.describe()"
+    "### Curate additional Xenium datasets"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register a collection"
+    "We can reuse the same curator for a second Xenium dataset:"
    ]
   },
   {
@@ -240,8 +415,29 @@
    },
    "outputs": [],
    "source": [
-    "artifact_img = ln.Artifact(img_path, description=\"Suo22 image F121_LP1_4LIV\")\n",
-    "artifact_img.save()"
+    "xenium_aligned_2_sdata = (\n",
+    "    ln.Artifact.using(\"laminlabs/lamindata\")\n",
+    "    .get(key=\"xenium_aligned_2_guide_min.zarr\")\n",
+    "    .load()\n",
+    ")\n",
+    "\n",
+    "xenium_aligned_2_sdata.tables[\"table\"].obs[\"celltype_major\"] = (\n",
+    "    xenium_aligned_2_sdata.tables[\"table\"]\n",
+    "    .obs[\"celltype_major\"]\n",
+    "    .replace(\n",
+    "        {\n",
+    "            \"CAFs\": \"cancer associated fibroblast\",\n",
+    "            \"Endothelial\": \"endothelial cell\",\n",
+    "            \"Myeloid\": \"myeloid cell\",\n",
+    "            \"PVL\": \"perivascular cell\",\n",
+    "            \"T-cells\": \"T cell\",\n",
+    "            \"B-cells\": \"B cell\",\n",
+    "            \"Normal Epithelial\": \"epithelial cell\",\n",
+    "            \"Plasmablasts\": \"plasmablast\",\n",
+    "            \"Cancer Epithelial\": \"neoplastic epithelial cell\",\n",
+    "        }\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -254,8 +450,11 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection([artifact_ad, artifact_img], name=\"Suo22\")\n",
-    "collection.save()"
+    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_2_sdata, spatial_schema)\n",
+    "try:\n",
+    "    xenium_curator.validate()\n",
+    "except ln.errors.ValidationError as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -268,9 +467,82 @@
    },
    "outputs": [],
    "source": [
-    "# clean up test instance\n",
-    "!lamin delete --force test-spatial\n",
-    "!rm -r test-flow"
+    "xenium_2_curated_af = xenium_curator.save_artifact(key=\"xenium2.zarr\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Curate Visium datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analogously, we can define a Schema and Curator for Visium datasets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "visium_aligned_sdata = (\n",
+    "    ln.Artifact.using(\"laminlabs/lamindata\")\n",
+    "    .get(key=\"visium_aligned_guide_min.zarr\")\n",
+    "    .load()\n",
+    ")\n",
+    "visium_aligned_sdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "visium_curator = ln.curators.SpatialDataCurator(visium_aligned_sdata, spatial_schema)\n",
+    "try:\n",
+    "    visium_curator.validate()\n",
+    "except ln.errors.ValidationError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "visium_curated_af = visium_curator.save_artifact(key=\"visium.zarr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "ln.finish()"
    ]
   }
  ],
@@ -291,12 +563,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.8"
-  },
-  "nbproject": {
-   "dependency": null,
-   "id": "daeFs3PkquDW",
-   "time_init": "2022-07-12T17:54:02.478333+00:00",
-   "version": "draft"
   }
  },
  "nbformat": 4,
