💚 Fix spatial data guide

--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty]' spatialdata spatialdata-plot\n",
+    "# pip install 'lamindb[jupyter,bionty]' spatialdata spatialdata-plot\n",
     "!lamin init --storage ./test-spatial --modules bionty"
    ]
   },
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating SpatialData Artifacts"
+    "## Creating artifacts"
    ]
   },
   {
@@ -140,22 +140,10 @@
    },
    "outputs": [],
    "source": [
-    "blobs_af = ln.Artifact.from_spatialdata(example_blobs_sdata, key=\"example_blobs.zarr\")\n",
+    "blobs_af = ln.Artifact.from_spatialdata(\n",
+    "    example_blobs_sdata, key=\"example_blobs.zarr\"\n",
+    ").save()\n",
     "blobs_af"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# SpatialData Artifacts have the corresponding otype\n",
-    "blobs_af.otype"
    ]
   },
   {
@@ -174,10 +162,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SpatialData artifacts have built-in lineage tracking like all other artifacts\n",
+    "blobs_af.view_lineage()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate SpatialData annotations"
+    "## Validating annotations"
    ]
   },
   {
@@ -196,6 +194,13 @@
     "Metadata is stored in two places in the SpatialData object:\n",
     "1. Dataset level metadata is stored in `sdata.attrs[\"sample\"]`.\n",
     "2. Measurement specific metadata is stored in the associated tables in `sdata.tables`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define a schema"
    ]
   },
   {
@@ -241,10 +246,11 @@
     "spatial_obs_schema = ln.Schema(\n",
     "    name=\"Spatial obs level\",\n",
     "    features=[\n",
-    "        ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True).save(),\n",
+    "        ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True)\n",
+    "        .save()\n",
+    "        .with_config(optional=True),\n",
     "    ],\n",
     "    coerce_dtype=True,\n",
-    "    minimal_set=False,\n",
     ").save()\n",
     "\n",
     "# define table var schema\n",
@@ -268,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Xenium data"
+    "### Curate a Xenium dataset"
    ]
   },
   {
@@ -522,6 +528,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visium_curator.slots[\"table:var\"].cat.add_new_from(\"columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -542,13 +557,51 @@
    },
    "outputs": [],
    "source": [
+    "visium_curated_af.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview of the curated datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visium_curated_af.view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Artifact.df(features=True, include=[\"hash\", \"size\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "ln.finish()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
