--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -130,34 +130,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# define labels\n",
+    "perturbation = ln.ULabel(name=\"Perturbation\", is_type=True).save()\n",
+    "ln.ULabel(name=\"Perturbed\", type=perturbation).save()\n",
+    "ln.ULabel(name=\"NT\", type=perturbation).save()\n",
+    "\n",
+    "replicate = ln.ULabel(name=\"Replicate\", is_type=True).save()\n",
+    "ln.ULabel(name=\"rep1\", type=replicate).save()\n",
+    "ln.ULabel(name=\"rep2\", type=replicate).save()\n",
+    "ln.ULabel(name=\"rep3\", type=replicate).save()\n",
+    "\n",
+    "# define obs schema\n",
+    "obs_schema = ln.Schema(\n",
+    "    name=\"mudata_papalexi21_subset_obs_schema\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"perturbation\", dtype=\"cat[ULabel[Perturbation]]\").save(),\n",
+    "        ln.Feature(name=\"replicate\", dtype=\"cat[ULabel[Replicate]]\").save(),\n",
+    "    ],\n",
+    ").save()\n",
+    "\n",
+    "obs_schema_rna = ln.Schema(\n",
+    "    name=\"mudata_papalexi21_subset_rna_obs_schema\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"nCount_RNA\", dtype=int).save(),\n",
+    "        ln.Feature(name=\"nFeature_RNA\", dtype=int).save(),\n",
+    "        ln.Feature(name=\"percent.mito\", dtype=float).save(),\n",
+    "    ],\n",
+    "    coerce_dtype=True,\n",
+    ").save()\n",
+    "\n",
+    "obs_schema_hto = ln.Schema(\n",
+    "    name=\"mudata_papalexi21_subset_hto_obs_schema\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"nCount_HTO\", dtype=float).save(),\n",
+    "        ln.Feature(name=\"nFeature_HTO\", dtype=int).save(),\n",
+    "        ln.Feature(name=\"technique\", dtype=bt.ExperimentalFactor).save(),\n",
+    "    ],\n",
+    "    coerce_dtype=True,\n",
+    ").save()\n",
+    "\n",
+    "var_schema_rna = ln.Schema(\n",
+    "    name=\"mudata_papalexi21_subset_rna_var_schema\",\n",
+    "    itype=bt.Gene.symbol,\n",
+    "    dtype=float,\n",
+    ").save()\n",
+    "\n",
+    "# define composite schema\n",
+    "mudata_schema = ln.Schema(\n",
+    "    name=\"mudata_papalexi21_subset_mudata_schema\",\n",
+    "    otype=\"MuData\",\n",
+    "    components={\n",
+    "        \"obs\": obs_schema,\n",
+    "        \"rna:obs\": obs_schema_rna,\n",
+    "        \"hto:obs\": obs_schema_hto,\n",
+    "        \"rna:var\": var_schema_rna,\n",
+    "    },\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mudata_schema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Validate MuData annotations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_mudata(\n",
-    "    mdata,\n",
-    "    var_index={\n",
-    "        \"rna\": bt.Gene.symbol,  # gene expression\n",
-    "        \"adt\": bt.CellMarker.name,  # antibody derived tags reflecting surface proteins\n",
-    "        \"hto\": ln.Feature.name,  # cell hashing\n",
-    "        \"gdo\": ln.Feature.name,  # guide RNAs\n",
-    "    },\n",
-    "    categoricals={\n",
-    "        \"perturbation\": ln.ULabel.name,  # shared categorical\n",
-    "        \"replicate\": ln.ULabel.name,  # shared categorical\n",
-    "        \"hto:technique\": bt.ExperimentalFactor.name,  # note this is a modality specific categorical\n",
-    "    },\n",
-    "    organism=\"human\",\n",
-    ")"
+    "curator = ln.curators.MuDataCurator(mdata, mudata_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    curator.validate()\n",
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
@@ -170,11 +248,16 @@
    },
    "outputs": [],
    "source": [
-    "# optional: register additional columns we would like to curate\n",
-    "curate.add_new_from_columns(modality=\"rna\")\n",
-    "curate.add_new_from_columns(modality=\"adt\")\n",
-    "curate.add_new_from_columns(modality=\"hto\")\n",
-    "curate.add_new_from_columns(modality=\"gdo\")"
+    "curator.slots[\"rna:var\"].cat.standardize(\"columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curator.slots[\"rna:var\"].cat.add_new_from(\"columns\")"
    ]
   },
   {
@@ -187,40 +270,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.validate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# add new var index\n",
-    "curate.add_new_from_var_index(\"rna\")\n",
-    "curate.add_new_from_var_index(\"hto\")\n",
-    "curate.add_new_from_var_index(\"gdo\")\n",
-    "\n",
-    "# add new categories\n",
-    "curate.add_new_from(\"perturbation\")\n",
-    "curate.add_new_from(\"replicate\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curate.validate()"
+    "curator.validate()"
    ]
   },
   {
@@ -240,7 +290,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curate.save_artifact(description=\"Sub-sampled MuData from Papalexi21\")"
+    "artifact = curator.save_artifact(key=\"mudata_papalexi21_subset.h5mu\")"
    ]
   },
   {
@@ -287,7 +337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -301,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "yMWSFirS6qv2",
