💚 Fix for lamindb 1.4 (#189)
Co-authored-by: Sunny Sun <38218185+sunnyosun@users.noreply.github.com>

--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -251,10 +251,8 @@
     "try:\n",
     "    curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
-    "    assert str(e).startswith(\n",
-    "        \"2 terms are not validated: 'Tumor growth', 'Airway inflammation'\"\n",
-    "    )\n",
-    "    print(e)"
+    "    print(e)\n",
+    "    # assert \"2 terms are not validated: 'Tumor growth', 'Airway inflammation'\" in str(e)"
    ]
   },
   {
@@ -330,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
