--- a/docs/sc-imaging4.ipynb
+++ b/docs/sc-imaging4.ipynb
@@ -77,7 +77,9 @@
     "            ln.Artifact.using(\"scportrait/examples\").get(uid).cache()\n",
     "        )\n",
     "        _sc_data = _sc_data[\n",
-    "            _sc_data.obs.scportrait_cell_id.isin(_selected_cells.cell_id.values)\n",
+    "            _sc_data.obs.scportrait_cell_id.isin(\n",
+    "                _selected_cells.scportrait_cell_id.values\n",
+    "            )\n",
     "        ].copy()\n",
     "        _sc_data.obs[\"score\"] = _selected_cells.prob_class1.values\n",
     "\n",
@@ -251,12 +253,12 @@
     "data_train, data_test = train_test_split(features_wt, test_size=0.4, random_state=42)\n",
     "\n",
     "# prepare data for model training by removing columns we don't want to train on\n",
-    "_data_train = data_train.drop(columns=[\"dataset\", \"cell_id\"])\n",
+    "_data_train = data_train.drop(columns=[\"dataset\", \"scportrait_cell_id\"])\n",
     "_data_train = _data_train.drop(\n",
     "    columns=[col for col in data_train.columns if \"mCherry\" in col]\n",
     ")  # subset to only include features from our channel of interest\n",
     "\n",
-    "_data_test = data_test.drop(columns=[\"dataset\", \"cell_id\"])\n",
+    "_data_test = data_test.drop(columns=[\"dataset\", \"scportrait_cell_id\"])\n",
     "_data_test = _data_test.drop(\n",
     "    columns=[col for col in data_test.columns if \"mCherry\" in col]\n",
     ")  # subset to only include features from our channel of interest\n",
@@ -449,7 +451,7 @@
    },
    "outputs": [],
    "source": [
-    "data_ko = features_ko.drop(columns=[\"dataset\", \"cell_id\"])\n",
+    "data_ko = features_ko.drop(columns=[\"dataset\", \"scportrait_cell_id\"])\n",
     "data_ko = data_ko.drop(columns=[x for x in data_ko.columns if \"mCherry\" in x])\n",
     "X_ko = data_ko.drop(\"class\", axis=1)\n",
     "y_true = data_ko[\"class\"]\n",
@@ -587,7 +589,7 @@
     "# select a random cell from the WT dataset\n",
     "cell = features_wt.sample(1, random_state=42)\n",
     "dataset = cell[\"dataset\"].values[0]\n",
-    "cell_id = cell[\"cell_id\"].values[0]\n",
+    "cell_id = cell[\"scportrait_cell_id\"].values[0]\n",
     "\n",
     "# get SpatialData object and single-cell image dataset\n",
     "sdata = (\n",
@@ -607,14 +609,15 @@
     "# plot single-cell images and spatial context\n",
     "fig, axs = plt.subplots(1, 2, figsize=(12, 3.5))\n",
     "scportrait.pl.cell_grid_multi_channel(\n",
-    "    single_cell_images, cell_ids=cell_id, axs=axs[0], show_fig=False\n",
+    "    single_cell_images, cell_ids=cell_id, ax=axs[0], show_fig=False\n",
+    ")\n",
+    "_sdata = scportrait.tl.sdata.pp.get_bounding_box_sdata(\n",
+    "    sdata, center_x=x, center_y=y, max_width=100\n",
     ")\n",
     "scportrait.pl.plot_segmentation_mask(\n",
-    "    sdata,\n",
+    "    _sdata,\n",
     "    masks=[\"seg_all_nucleus\", \"seg_all_cytosol\"],\n",
-    "    select_region=(x, y),\n",
-    "    max_width=100,\n",
-    "    axs=axs[1],\n",
+    "    ax=axs[1],\n",
     "    show_fig=False,\n",
     ")\n",
     "axs[1].scatter(\n",
@@ -663,7 +666,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "lamin",
    "language": "python",
    "name": "python3"
   },
@@ -677,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
