💚 Fix collection key

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -408,7 +408,7 @@
    },
    "outputs": [],
    "source": [
-    "collection_v1 = ln.Collection.get(name=\"My versioned cytometry collection\")"
+    "collection_v1 = ln.Collection.get(key=\"My versioned cytometry collection\")"
    ]
   },
   {
