--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -51,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection.get(name=\"My versioned cytometry collection\", version=\"2\")"
+    "collection = ln.Collection.get(key=\"My versioned cytometry collection\", version=\"2\")"
    ]
   },
   {
