--- a/docs/sc-imaging.ipynb
+++ b/docs/sc-imaging.ipynb
@@ -312,8 +312,7 @@
     "    artifacts,\n",
     "    key=\"Annotated autophagy imaging raw images\",\n",
     "    description=\"annotated microscopy images of cells stained for autophagy markers\",\n",
-    ")\n",
-    "collection.save()"
+    ").save()"
    ]
   },
   {
@@ -382,7 +381,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
