--- a/docs/sc-imaging2.ipynb
+++ b/docs/sc-imaging2.ipynb
@@ -604,7 +604,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
