--- a/docs/sc-imaging3.ipynb
+++ b/docs/sc-imaging3.ipynb
@@ -77,7 +77,7 @@
     "# Get single-cell images and config\n",
     "sc_datasets = (\n",
     "    ln.Artifact.using(\"scportrait/examples\")\n",
-    "    .filter(ulabels__name=\"autophagy imaging\")\n",
+    "    .filter(ulabels__name=\"autophagy imaging\", is_latest=True)\n",
     "    .filter(ulabels__name=\"scportrait single-cell images\")\n",
     ")\n",
     "config = (\n",
@@ -267,7 +267,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
