--- a/docs/sc-imaging4.ipynb
+++ b/docs/sc-imaging4.ipynb
@@ -143,13 +143,13 @@
     "\n",
     "sc_datasets = (\n",
     "    ln.Artifact.using(\"scportrait/examples\")\n",
-    "    .filter(ulabels=study)\n",
+    "    .filter(ulabels=study, is_latest=True)\n",
     "    .filter(ulabels__name=\"scportrait single-cell images\")\n",
     ")\n",
     "featurized_datasets = (\n",
     "    ln.Artifact.using(\"scportrait/examples\")\n",
-    "    .filter(ulabels=study)\n",
-    "    .filter(description=\"featurized single-cell images\", is_latest=True)\n",
+    "    .filter(ulabels=study, is_latest=True)\n",
+    "    .filter(description=\"featurized single-cell images\")\n",
     ")\n",
     "\n",
     "class_lookup = {0: \"untreated\", 1: \"14h Torin-1\"}\n",
