--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -94,6 +94,7 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
+    "import spatialdata as sd\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -113,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lamindb provides a {meth}`~lamindb.Artifact.from_spatialdata` method to create {class}`~lamindb.Artifact` from SpatialData objects."
+    "You can use {meth}`~lamindb.Artifact.from_spatialdata` method to create an {class}`~lamindb.Artifact` object from a `SpatialData` object."
    ]
   },
   {
@@ -147,18 +148,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# SpatialData Artifacts can easily be loaded back into memory\n",
-    "example_blobs_in_memory = blobs_af.load()\n",
-    "example_blobs_in_memory"
+    "To retrieve the object back from the database you can, e.g., query by `key`."
    ]
   },
   {
@@ -167,7 +160,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SpatialData artifacts have built-in lineage tracking like all other artifacts\n",
+    "example_blobs_sdata = ln.Artifact.get(key=\"example_blobs.zarr\")\n",
+    "example_blobs_sdata = (\n",
+    "    blobs_af.load()\n",
+    ")  # calls sd.read_zarr() on a locally cached .zarr store\n",
+    "example_blobs_sdata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see data lineage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "blobs_af.view_lineage()"
    ]
   },
